refactor(DBCleanerWorker): optimize table truncation and improve table retrieval logic
- Replaced the DELETE query with TRUNCATE for more efficient table clearing in `truncateTable`.
- Updated the method for retrieving table names to use distinct and sorted results, enhancing clarity and performance.

These changes streamline database cleanup operations and improve the overall efficiency of table management in the application.